--- a/requirements_all.txt
+++ b/requirements_all.txt
@@ -1691,6 +1691,9 @@ pykmtronic==0.3.0
 # homeassistant.components.kodi
 pykodi==0.2.7
 
+# homeassistant.components.kostal_piko
+pykostal==0.0.2
+
 # homeassistant.components.kraken
 pykrakenapi==0.1.8
 
